syntax = "proto3";

import "google/protobuf/empty.proto";
import "rococo-common.proto";

package timofeyqa.grpc.rococo;

option java_multiple_files = true;
option java_package = "timofeyqa.grpc.rococo";
option java_outer_classname = "RococoPaintingProto";

service RococoPaintingService {
  rpc GetPainting (Uuid) returns (Painting);
  rpc GetPaintingsPage(Pageable) returns (PagePainting);
  rpc GetPaintingsByArtist(GetPaintingsByArtistRequest) returns (PagePainting);
  rpc UpdatePainting(Painting) returns (Painting);
}

message Painting {
  string id = 1;
  string title = 2;
  string description = 3;
  string artistId = 4;
  string museumId = 6;
  bytes content = 5;
}

message PagePainting {
  repeated Painting paintings = 1;
  int64 total_elements = 2;
  int32 total_pages = 3;
}

message GetPaintingsByArtistRequest {
  Uuid uuid = 1;
  Pageable pageable = 2;
}